fixing contrast

--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,9 @@
 body {
   font-family: 'Roboto', Helvetica, sans-serif;
-  background-color: grey;
+  background-color: #222;
   margin: 0;
   padding: 0;
+  color: white;
 }
 
 h1,
